--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <p>I officially started my coding journey on <strong>June 5th, 2021.</strong> I had started, and stopped, twice before but this time I was really motivated! I was ready to change my 
         career and learn a new skill. I primarily used Codecademy, but I also used YouTube to help me understand the more complex concepts.</p>
       <p>To help me stay focused and accountable I set a goal and kept a daily journal of my progress. My goal was to achieve 1% progress in Codecademy’s Full-Stack Engineer Pro course per 
-        day, aiming for a 100% in 100 days of lessons. The goal wasn’t to do it in 100 consecutive days, however. I made sure to take the appropriate time to work on my portfolio, projects 
-        and include down time. I took one day off per week and I gave myself a full month between the Front-End and Back-End lessons to help solidify what I had been learning.</p>
-      <p>My goal timeline was to complete the Front-End section in June and July, then take August to build my portfolio and complete some projects. Then complete the Back-End section, 
-        thereby completing the Full-Stack program, in September and October. My Codecademy journey would then end on Halloween but my coding journey would have only just begun!</p>
-
+        day, aiming for a 100% in 100 days of lessons. The goal wasn’t to do it in 100 consecutive days, however. I made sure to take the appropriate time to work on my portfolio, my 
+        projects and include down time. I took one day off per week and I gave myself two months between the Front-End and Back-End lessons to help solidify what I had been learning.</p>
+      <p>My goal timeline was to complete the Front-End section in June and July, then take August and September to build my portfolio and complete some projects. Then complete the Back-End 
+        section, thereby completing the Full-Stack program, in October and November. My Codecademy journey would then end by early December but my coding journey would have only just 
+        begun!</p>
         <p>This is my coding journal!</p>
   </div>
   
@@ -267,74 +267,40 @@
           <br> <em>(2 hrs - 104 hrs Total) (56% Complete - Goal 49%)</em> </li>
 
         <li> <u>Sunday, August 1 - Thursday, August 5</u> <br> Since I had been using just about all the free time and extra brain power I had in the last two months I decided to give myself 
-          4 days, and a date night, of break. I made sure to do daily quizzes on "Learn JavaScript", "Web Development", and "Create a Front-End App with React" in the Codecademy Go app but 
-          other than that I enjoyed some down time. </li>
+          4 days, and a date night, of break. I made sure to do daily quizzes on "Learn JavaScript'', "Web Development", and "Create a Front-End App with React" in the Codecademy Go app but 
+          other than that I enjoyed some downtime. </li>
 
-        <li> <u>Friday, August 6</u> <br> I had the day off from work, a company wide pandemic R&R thing. I took advantage of this opportunity to start hashing out my projects for the month. 
-          The first thing I did was decide on the React projects I wanted to attempt. I wanted to start off easy and ramp up so I planned on starting with a To Do List app and a Tic-Tac-Toe 
-          app. Then from there I would create a Stock/Crypto Tracker and a Yelp! app that helps you find nearby, highly reviewed, restaurants (I made a list of 9 projects in total just in case 
-          I had more time). Now that I had my list I was ready to start my first React app! After spending time trying to get an extremely basic React app embedded in my existing website (to 
-          then start building my first app) I decided to create a new repo on github and link to it from my website instead. After starting a new repo I spent the remainder of the day working 
-          on the To Do List app! </li>
+        <li> <u>Friday, August 6</u> <br> I had the day off from work, a company-wide pandemic R&R thing. I took advantage of this opportunity to start hashing out my projects for the next 
+          two months. The first thing I did was decide on the React projects I wanted to attempt. I wanted to start off easy and ramp up so I planned on starting with a To-Do List app and a 
+          Tic-Tac-Toe app. Then from there, I would create a Stock/Crypto Tracker and a Yelp! app that helps you find nearby, highly reviewed, restaurants (I made a list of 9 projects in 
+          total just in case I had more time). Now that I had my list I was ready to start my first React app! After spending time trying to get an extremely basic React app embedded in my 
+          existing website (to then start building my first app) I decided to create a new repo on github and link to it from my website instead. After starting a new repo I spent the 
+          remainder of the day working on the To-Do List app! </li>
 
-        <li> <u>Saturday, August 7</u> <br> After struggling with the ToDoList app yesterday, I spoke with my web dev friend about it and where/why I was struggling. I had almost 
-          immediately resorted to a code along for help. He suggested that I was trying to do too much too quickly and that I break it down to baby steps and work my way up very slowly and 
-          carefully. So that was the goal for today! I started a fresh new repo and react app and started over with the goal of googling and youtubing first, and looking at the code along 
-          code as a last resort. </li>
+        <li> <u>Saturday, August 7 - Sunday, August 8</u> <br> After struggling with the To-Do List app yesterday, I spoke with my web dev friend about it and where/why I was struggling. I 
+          had almost immediately resorted to a code-along for help. He suggested that I was trying to do too much too quickly and that I break it down to baby steps and work my way up very 
+          slowly and carefully. So that was the goal for today! I started a fresh new repo and react app and started over with the goal of googling and YouTubing first and looking at the 
+          code-along as a last resort. </li>
 
-        <!-- <li> <u>Sunday, August 8</u> <br> ENTRY </li> -->
+        <!-- <li> <u>Monday, August 9 - Sunday, August 15</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>Monday, August 9</u> <br> ENTRY </li> -->
+        <!-- <li> <u>Monday, August 16 - Sunday, August 22</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>Tuesday, August 10</u> <br> Tuesdays are Off Days. </li> -->
+        <!-- <li> <u>Monday, August 23 - Sunday, August 29</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>Wednesday, August 11</u> <br> ENTRY </li> -->
+        <!-- <li> <u>Monday, August 30 - Sunday, September 5</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>Thursday, August 12</u> <br> ENTRY </li> -->
+        <!-- <li> <u>Monday, September 6 - Sunday, September 12</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>Friday, August 13</u> <br> ENTRY </li> -->
+        <!-- <li> <u>Monday, September 13 - Sunday, September 19</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>Saturday, August 14</u> <br> ENTRY </li> -->
+        <!-- <li> <u>Monday, September 20 - Sunday, September 26</u> <br> ENTRY </li> -->
 
-        <!-- <li> <u>Sunday, August 15</u> <br> ENTRY </li> -->
+        <!-- <li> <u>Monday, September 27- Sunday, October 3</u> <br> ENTRY </li> -->
                 
-        <!-- <li> <u>Monday, August 16</u> <br> ENTRY </li> -->
+        <!-- <li> <u>Day 50: Monday, October 4th</u> <br> ENTRY HERE. <br> <em>(X hrs - XX hrs Total) (X% Complete - Goal 50%)</em> </li> -->
 
-        <!-- <li> <u>Tuesday, August 17</u> <br> Tuesdays are Off Days. </li> -->
-
-        <!-- <li> <u>Wednesday, August 18</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Thursday, August 19</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Friday, August 20</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Saturday, August 21</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Sunday, August 22</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Monday, August 23</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Tuesday, August 24</u> <br> Tuesdays are Off Days. </li> -->
-
-        <!-- <li> <u>Wednesday, August 25</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Thursday, August 26</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Friday, August 27</u> <br> ENTRY </li> -->
-                
-        <!-- <li> <u>Saturday, August 28</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Sunday, August 29</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Monday, August 30</u> <br> ENTRY </li> -->
-
-        <!-- <li> <u>Tuesday, August 31</u> <br> Tuesdays are Off Days. </li> -->
-
-        <!-- <li> <u>Day 50: Wednesday, September 1</u> <br> ENTRY <br> <em>(X hrs - XX hrs Total) (X% Complete - Goal 50%)</em> </li> -->
-
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
-
-        <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
+        <!-- <li> <u>Day OFF: Tuesday, October 5th</u> <br> Tuesdays are Off Days. <br> <em>(XX hrs Total)</em> </li> -->
 
         <!-- <li> <u>DATE</u> <br> ENTRY <br> <em>PROGRESS</em> </li> -->
 
