combined entries for readability

--- a/index.html
+++ b/index.html
@@ -270,17 +270,11 @@
           4 days, and a date night, of break. I made sure to do daily quizzes on "Learn JavaScript'', "Web Development", and "Create a Front-End App with React" in the Codecademy Go app but 
           other than that I enjoyed some downtime. </li>
 
-        <li> <u>Friday, August 6</u> <br> I had the day off from work, a company-wide pandemic R&R thing. I took advantage of this opportunity to start hashing out my projects for the next 
-          two months. The first thing I did was decide on the React projects I wanted to attempt. I wanted to start off easy and ramp up so I planned on starting with a To-Do List app and a 
-          Tic-Tac-Toe app. Then from there, I would create a Stock/Crypto Tracker and a Yelp! app that helps you find nearby, highly reviewed, restaurants (I made a list of 9 projects in 
-          total just in case I had more time). Now that I had my list I was ready to start my first React app! After spending time trying to get an extremely basic React app embedded in my 
-          existing website (to then start building my first app) I decided to create a new repo on github and link to it from my website instead. After starting a new repo I spent the 
-          remainder of the day working on the To-Do List app! </li>
-
-        <li> <u>Saturday, August 7 - Sunday, August 8</u> <br> After struggling with the To-Do List app yesterday, I spoke with my web dev friend about it and where/why I was struggling. I 
-          had almost immediately resorted to a code-along for help. He suggested that I was trying to do too much too quickly and that I break it down to baby steps and work my way up very 
-          slowly and carefully. So that was the goal for today! I started a fresh new repo and react app and started over with the goal of googling and YouTubing first and looking at the 
-          code-along as a last resort. </li>
+        <li> <u>Friday, August 6 - Sunday, August 8</u> <br> The first thing I decided was to write the project progress in weekly updates. The second thing I did was decide on the React 
+          projects I wanted to attempt. I wanted to start off easy and ramp up so I planned on starting with a To-Do List app and a Tic-Tac-Toe app. Then from there, I would create a 
+          Stock/Crypto Tracker and a Yelp! app that helps you find nearby, highly reviewed, restaurants (I made a list of 9 projects in total just in case I had more time). Now that I had 
+          my list I was ready to start my first React app! I spent some time setting up my first React environment and got to work! I realized pretty quickly it was going to be a struggle, 
+          but I knew it would be.  </li>
 
         <!-- <li> <u>Monday, August 9 - Sunday, August 15</u> <br> ENTRY </li> -->
 
