--- a/Projects.html
+++ b/Projects.html
@@ -21,8 +21,20 @@
 
 <!-- Projects Page Body -->
 <body>
+  <div class="BlackJackGame">
+    <h1>Blackjack</h1>
+    <p id="message-element">Want to play a blackjack?</p>
+    <p id="cards-element">Cards:</p>
+    <p id="sum-element">Sum:</p>
+    <button onclick="startGame()">Start Game</button>
+    <button onclick="hitCard()">Hit</button>
+    <button onclick="stayCard()">Stay</button>
+    <p id="result-element">Result:</p>
+    <script src="blackjackgame.js"></script>
+  </div>
+
   <div class="Projects">
-    <h1>Coming Soon!</h1>
+    <h1>More Coming Soon!</h1>
   </div>
 
 <!-- Footer -->
