cleaned up the Results prompt

--- a/Projects.html
+++ b/Projects.html
@@ -29,7 +29,7 @@
     <button onclick="startGame()">Start Game</button>
     <button onclick="hitCard()">Hit</button>
     <button onclick="stayCard()">Stay</button>
-    <p id="result-element">Result:</p>
+    <p id="result-element">Click Start Game to Play!</p>
     <script src="blackjackgame.js"></script>
   </div>
 
