added weekly entry

--- a/index.html
+++ b/index.html
@@ -274,9 +274,12 @@
           projects I wanted to attempt. I wanted to start off easy and ramp up so I planned on starting with a To-Do List app and a Tic-Tac-Toe app. Then from there, I would create a 
           Stock/Crypto Tracker and a Yelp! app that helps you find nearby, highly reviewed, restaurants (I made a list of 9 projects in total just in case I had more time). Now that I had 
           my list I was ready to start my first React app! I spent some time setting up my first React environment and got to work! I realized pretty quickly it was going to be a struggle, 
-          but I knew it would be.  </li>
+          but I always knew it would be.  </li>
 
-        <!-- <li> <u>Monday, August 9 - Sunday, August 15</u> <br> ENTRY </li> -->
+        <li> <u>Monday, August 9 - Sunday, August 15</u> <br> I’m not going to lie, my first attempt was miserable and disheartening. I realized almost right away that I was in way over my 
+          head. All I was trying to do was a simple To-Do List app and I struggled with the very first step. I watched a few tutorials and code alongs and felt more lost and frustrated 
+          afterwards. I decided to slow down, back up a bit, and try again. I came up with a game plan to retread some ground, revisit some Codecademy lessons, then try again. By the end of 
+          the week I had made a Blackjack app in vanilla JS and added it to my portfolio page (check it out!). It was exactly the confidence builder I needed! </li>
 
         <!-- <li> <u>Monday, August 16 - Sunday, August 22</u> <br> ENTRY </li> -->
 
