updated blog, added weekly entry and added react app to projects

--- a/index.html
+++ b/index.html
@@ -281,7 +281,10 @@
           afterwards. I decided to slow down, back up a bit, and try again. I came up with a game plan to retread some ground, revisit some Codecademy lessons, then try again. By the end of 
           the week I had made a Blackjack app in vanilla JS and added it to my portfolio page (check it out!). It was exactly the confidence builder I needed! </li>
 
-        <!-- <li> <u>Monday, August 16 - Sunday, August 22</u> <br> ENTRY </li> -->
+        <li> <u>Monday, August 16 - Sunday, August 22</u> <br> My goal wasn’t to work in Vanilla JS though, so now I needed to focus on React projects. At the start of the week I laid out a 
+          list of tutorials to watch on YouTube, with a code along project at the end. The same To Do List app that was tripping me up earlier. I watched roughly 20 hours of tutorials, then 
+          completed the code along. I added the link to the app in my portfolio from my github and called it a week. I definitely feel a little better, ready to take on a project from scratch 
+          again! </li>
 
         <!-- <li> <u>Monday, August 23 - Sunday, August 29</u> <br> ENTRY </li> -->
 
