--- a/Projects.html
+++ b/Projects.html
@@ -37,7 +37,7 @@
     <h1>Projects on Github</h1>
       <ul class="ProjectList">
         <li>
-          <a href="https://github.com/ColinH58/todolist-react" target="_blank">To Do List App in React</a>
+          <a href="https://github.com/ColinH58/todolist-react" target="_blank">To Do List App in React (Code Along)</a>
         </li>
         
         <!-- <li>
