added tic tac toe app to projects list

--- a/Projects.html
+++ b/Projects.html
@@ -40,9 +40,9 @@
           <a href="https://github.com/ColinH58/todolist-react" target="_blank">To Do List App in React (Code Along)</a>
         </li>
         
-        <!-- <li>
-          <a href="AppLinkHere" target="_blank">APP NAME</a>
-        </li> -->
+        <li>
+          <a href="https://github.com/ColinH58/tictactoe-react" target="_blank">Tic Tac Toe in React (Code Along w/ Modifications)</a>
+        </li>
         
         <!-- <li>
           <a href="AppLinkHere" target="_blank">APP NAME</a>
