added weekly entry

--- a/Projects.html
+++ b/Projects.html
@@ -47,6 +47,30 @@
         <!-- <li>
           <a href="AppLinkHere" target="_blank">APP NAME</a>
         </li> -->
+
+        <!-- <li>
+          <a href="AppLinkHere" target="_blank">APP NAME</a>
+        </li> -->
+
+        <!-- <li>
+          <a href="AppLinkHere" target="_blank">APP NAME</a>
+        </li> -->
+        
+        <!-- <li>
+          <a href="AppLinkHere" target="_blank">APP NAME</a>
+        </li> -->
+
+        <!-- <li>
+          <a href="AppLinkHere" target="_blank">APP NAME</a>
+        </li> -->
+
+        <!-- <li>
+          <a href="AppLinkHere" target="_blank">APP NAME</a>
+        </li> -->
+
+        <!-- <li>
+          <a href="AppLinkHere" target="_blank">APP NAME</a>
+        </li> -->
         
         <!-- <li>
           <a href="AppLinkHere" target="_blank">APP NAME</a>
