--- a/index.html
+++ b/index.html
@@ -283,10 +283,14 @@
 
         <li> <u>Monday, August 16 - Sunday, August 22</u> <br> My goal wasn’t to work in Vanilla JS though, so now I needed to focus on React projects. At the start of the week I laid out a 
           list of tutorials to watch on YouTube, with a code along project at the end. The same To Do List app that was tripping me up earlier. I watched roughly 20 hours of tutorials, then 
-          completed the code along. I added the link to the app in my portfolio from my github and called it a week. I definitely feel a little better, ready to take on a project from scratch 
+          completed the code-along. I added the link to the app in my portfolio from my github and called it a week. I definitely feel a little better, ready to take on a project from scratch 
           again! </li>
 
-        <!-- <li> <u>Monday, August 23 - Sunday, August 29</u> <br> ENTRY </li> -->
+        <li> <u>Monday, August 23 - Sunday, August 29</u> <br> I started the week off by tweaking the colors and responsiveness of my portfolio. I plan on eventually redoing the whole thing in 
+          React though. I then attempted a tic-tac-toe project on my own. I once again found myself struggling with it, I may have chosen a more intermediate assignment too quickly. So I decided 
+          to code along for it as well but this time I would make a couple modifications to it. I tinkered with it for a day after the code-along. I added a reset button and set it to 
+          automatically reset on meeting the win condition. I also spent about two hours trying to rebuild the to do list app from scratch with a web developer friend, which I also found very 
+          challenging but ultimately was able to do it. What an exhausting week! </li>
 
         <!-- <li> <u>Monday, August 30 - Sunday, September 5</u> <br> ENTRY </li> -->
 
