added weekly entry

--- a/index.html
+++ b/index.html
@@ -292,7 +292,9 @@
           automatically reset on meeting the win condition. I also spent about two hours trying to rebuild the to do list app from scratch with a web developer friend, which I also found very 
           challenging but ultimately was able to do it. What an exhausting week! </li>
 
-        <!-- <li> <u>Monday, August 30 - Sunday, September 5</u> <br> ENTRY </li> -->
+        <li> <u>Monday, August 30 - Sunday, September 5</u> <br> I spent the first half of the week finding more resources online to help me with React. I researched tutors and coding bootcamps 
+          and ultimately ended up taking half the week off. I think I’ve realized that I’ve been watching too much, hoping to understand it, when I need to fight through practice instead. My 
+          goal for the next week is to do just that. I’ve definitely been pushing myself harder than I need to, so taking a step back and regrouping was very nice and necessary! </li>
 
         <!-- <li> <u>Monday, September 6 - Sunday, September 12</u> <br> ENTRY </li> -->
 
