weekly entry added

--- a/index.html
+++ b/index.html
@@ -296,7 +296,10 @@
           and ultimately ended up taking half the week off. I think I’ve realized that I’ve been watching too much, hoping to understand it, when I need to fight through practice instead. My 
           goal for the next week is to do just that. I’ve definitely been pushing myself harder than I need to, so taking a step back and regrouping was very nice and necessary! </li>
 
-        <!-- <li> <u>Monday, September 6 - Sunday, September 12</u> <br> ENTRY </li> -->
+        <li> <u>Monday, September 6 - Sunday, September 12</u> <br> My goal was to slow down and try again but instead I spent the week researching bootcamps. I got accepted, and worked towards 
+          signing up for two. SMU and UTD in Dallas, TX. Getting them to call me was surprisingly difficult, comparing them was also difficult because they cost the same and covered the same 
+          technologies. I ultimately decided these weren’t going anywhere and I wanted to try to do this on my own. Having a bootcamp would be my ace up my sleeve but I didn’t need to play it 
+          just yet. </li>
 
         <!-- <li> <u>Monday, September 13 - Sunday, September 19</u> <br> ENTRY </li> -->
 
