added weekly entry and fixed grammar/typos from preivous entries

--- a/index.html
+++ b/index.html
@@ -104,41 +104,42 @@
 
         <li> <u>Week 10: Monday, August 9 - Sunday, August 15</u> <br> 
           I’m not going to lie, my first attempt was miserable and disheartening. I realized almost right away that I was in way over my head. All I was trying to do was a simple To-Do List 
-          app and I struggled with the basics. I watched a few tutorials and code alongs and felt more lost and frustrated afterwards. I decided to slow down, back up a bit, and try again. I 
-          came up with a game plan to retread some ground, revisit some Codecademy lessons, then try again. By the end of the week I had made a Blackjack app in vanilla JS and added it to my 
-          portfolio page (check it out!). Although it was a code-along project I was able to add features, such as an “AI” opponent, and various other small changes. It was exactly the 
+          app and I struggled with the basics. I watched a few tutorials and code along and felt more lost and frustrated afterward. I decided to slow down, back up a bit, and try again. I 
+          came up with a game plan to retread some ground, revisit some Codecademy lessons, then try again. By the end of the week, I had made a Blackjack app in vanilla JS and added it to 
+          my portfolio page (check it out!). Although it was a code-along project I was able to add features, such as an “AI” opponent, and various other small changes. It was exactly the 
           confidence builder I needed! </li>
 
         <li> <u>Week 11: Monday, August 16 - Sunday, August 22</u> <br> 
-          My goal isn’t to work in vanilla JS though, so now I needed to focus on React projects. At the start of the week I laid out a list of tutorials to watch on YouTube, with a code 
-          along project at the end. The same To Do List app that was tripping me up earlier. I watched roughly 20 hours of tutorials, then completed the code-along. I added the link to the 
-          app in my portfolio from my github and called it a week. I definitely feel a little better, ready to take on a project from scratch again! </li>
+          My goal isn’t to work in vanilla JS though, so now I needed to focus on React projects. At the start of the week, I laid out a list of tutorials to watch on YouTube, with a code 
+          along with the project at the end. The same To-Do List app that was tripping me up earlier. I watched roughly 20 hours of tutorials, then completed the code-along. I added the link 
+          to the app in my portfolio from my GitHub and called it a week. I definitely feel a little better, ready to take on a project from scratch again! </li>
 
         <li> <u>Week 12: Monday, August 23 - Sunday, August 29</u> <br> 
           I started the week off by tweaking the colors and responsiveness of my portfolio. I then attempted a tic-tac-toe project on my own. I once again found myself struggling with it, I 
-          may have chosen a more intermediate assignment too quickly. So I decided to code along for it as well but this time I would make a couple modifications to it. I tinkered with it for 
-          a day after the code-along. I added a reset button and set it to automatically reset on meeting the win condition after a short delay. I also spent about two hours trying to rebuild 
-          the to do list app from scratch with a web developer friend, which I also found very challenging but ultimately was able to do. </li>
+          may have chosen a more intermediate assignment too quickly. So I decided to code along for it as well but this time I would make a couple of modifications to it. I tinkered with it 
+          for a day after the code-along. I added a reset button and set it to automatically reset on meeting the win condition after a short delay. I also spent about two hours trying to 
+          rebuild the to-do list app from scratch with a web developer friend, which I also found very challenging but ultimately was able to do. </li>
 
         <li> <u>Week 13: Monday, August 30 - Sunday, September 5</u> <br> 
-          I spent the first half of the week finding more resources online to help me with React. I researched tutors and coding bootcamps and ultimately ended up taking half the week off 
+          I spent the first half of the week finding more resources online to help me with React. I researched tutors and coding boot camps and ultimately ended up taking half the week off 
           from projects. I think I’ve realized that I’ve been watching too much, hoping to understand it, when I need to fight through practice instead. My goal for the next week is to do 
-          just that. <br> </li>
+          just that.  </li>
 
         <li> <u>Week 14: Monday, September 6 - Sunday, September 12</u> <br> 
-          My goal was to try again but instead I spent the week researching bootcamps. I got accepted by SMU and UTD here in Dallas, TX. Getting them to call me was surprisingly difficult, 
+          My goal was to try again but instead, I spent the week researching boot camps. I got accepted by SMU and UTD here in Dallas, TX. Getting them to call me was surprisingly difficult, 
           comparing them was also difficult because the cost was the same and they both covered the same technologies. I ultimately decided these weren’t going to be a good fit, I need to slow 
-          down and work at my pace, bootcamps were going to be fast paced. I felt comfort in knowing that if I couldn’t figure out how to progress I could always fall back on one. </li>
+          down and work at my pace, boot camps were going to be fast-paced. I felt comfort in knowing that if I couldn’t figure out how to progress I could always fall back on one. </li>
 
         <li> <u>Week 15: Monday, September 13 - Sunday, September 19</u> <br> 
           Ok so, back on track? I spent the week back on Codecademy. I redid the vanilla JS lessons and the React lessons. I may have gone through them too quickly the first time. My plan was 
-          to slow down, make sure I understood everything I was seeing, and to not dismiss anything. When I hit something I didn’t fully understand I made sure to supplement it with a YouTube 
+          to slow down, make sure I understood everything I was seeing, and not dismiss anything. When I hit something I didn’t fully understand I made sure to supplement it with a YouTube 
           tutorial. I also revisited the textbooks, cover to cover. I’m not sure if this is what they call “tutorial hell” but it made me feel better prepared to try a React app again. I also 
-          spent some time reformatting my blog for readability and to make my life easier. </li>
+          spent some time reformatting my blog for readability and to make my life easier.  </li>
 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>resolvedValueArray</u> <br> 
+          Back on track part 2. I wasn’t able to finish the React lessons (for the 2nd time) last week so I made sure to complete them, again, this week. I did all the same things as last week 
+          but this time with React exclusively. I’m almost certain this is what “tutorial hell” is, but I planned on moving on to guided projects via YouTube and I wasn’t feeling quite ready 
+          until now.  </li>
                 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
