whoops, missed a rogue copy and paste error! corrected the week 16 title

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           tutorial. I also revisited the textbooks, cover to cover. I’m not sure if this is what they call “tutorial hell” but it made me feel better prepared to try a React app again. I also 
           spent some time reformatting my blog for readability and to make my life easier.  </li>
 
-        <li> <u>resolvedValueArray</u> <br> 
+        <li> <u>Week 16: Monday, September 20 - Sunday, September 26</u> <br> 
           Back on track part 2. I wasn’t able to finish the React lessons (for the 2nd time) last week so I made sure to complete them, again, this week. I did all the same things as last week 
           but this time with React exclusively. I’m almost certain this is what “tutorial hell” is, but I planned on moving on to guided projects via YouTube and I wasn’t feeling quite ready 
           until now.  </li>
