updated entries and added this week's early

--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
   <div class="AboutSetup">
     <h2>My Coding Journey</h2>
       <p>I officially started my coding journey on <strong>June 5th, 2021.</strong> I had started, and stopped, twice before but this time I was committed! I was ready to change my career and 
-        learn a new skill. I primarily used Codecademy, but I also used YouTube to help me understand the more complex concepts.</p>
+        learn a new skill. I started out using Codecademy and YouTube, about 16 weeks in I decided to sign up for a coding boot camp, Fullstack Academy, hosted through the University of Texas 
+        at Dallas.</p>
 
-      <p>To help me stay focused and accountable I set a goal and kept a daily journal of my progress. My goal was to complete the Full Stack Developer course on Codecademy. Starting with the 
-        Front End Developer section, pausing my progress to build out my portfolio, then resuming the Back End section while searching for a Front End Developer position.</p>
+      <p>To help me stay focused and accountable, before the boot camp, I set a goal and kept a daily journal of my progress. My goal was to complete the Full Stack Developer course on 
+        Codecademy. Starting with the Front End Developer section, pausing my progress to build out my portfolio, then resuming the Back End section while searching for a Front End Developer 
+        position. I didn’t ultimately stick to this original plan, as halfway through it I decided to sign up for a boot camp.</p>
 
-      <p>I started my journey with a strict timeline to follow but adjusted, mid journey, as I was causing myself undue stress and forcing myself to cut corners. I shifted the goal posts a 
-        little but never lost sight of the ultimate goal: Developing and honing the necessary skills for a career change.</p>
+      <p>I started my journey with a strict timeline to follow but adjusted and shifted the goalposts as I figured out what worked and what didn’t. Through it all, I never lost sight of the 
+        ultimate goal: Developing and honing the necessary skills for a career change. </p>
 
         <p>This is my coding journal!</p>
   </div>
@@ -48,16 +50,16 @@
           I started by first resetting all my previous progress on Codecademy, then subscribing to the Full-Stack Engineer Pro course. The first two days, and my first “week”, I was excited 
           and probably overdid it a bit. I spent 3 hours both days, I learned the basics of JavaScript and I spent time reading the first chapters in the two Jon Duckett books my curriculum 
           recommended. (HTML & CSS Design and Build Websites - JavaScript and JQuery) <br> 
-          <em>(6 hrs Total) (4% Completed the FSD Course)</em> </li>
+          <em>(6 hrs Total) (4% Completed the Full-Stack Developer course)</em> </li>
 
         <li> <u>Week 1: Monday, June 7 - Sunday, June 13</u> <br> 
-          My first full week. I spent over 3 hours per day between Codecademy, reading the textbooks, and watching youtube. I struggled with higher order functions, so I slowed down a bit to 
+          My first full week. I spent over 3 hours per day between Codecademy, reading the textbooks, and watching youtube. I struggled with higher-order functions, so I slowed down a bit to 
           research them more. I turned to YouTube and a friend in the industry for help. I was also introduced to the art of understanding error messages and started doing daily knowledge 
           checks with the CodecademyGo mobile app. <br> 
           <em>(29.5 hrs Total) (11% Completed the Full-Stack Developer course)</em> </li>
 
         <li> <u>Week 2: Monday, June 14 - Sunday, June 2</u> <br> 
-          The first thing I learned about this week was git, what it is and how to use GitHub. After git the course returned to JavaScript. All in all I had a rough week, I was unproductive 
+          The first thing I learned about this week was git, what it is and how to use GitHub. After git the course returned to JavaScript. All in all, I had a rough week, I was unproductive 
           and unfocused. I had a stressful life event that made the week challenging, but I powered through as best as I could. I found myself making more progress in the textbooks than the 
           actual Codecademy course. <br> 
           <em>(42.5 hrs Total) (15% Completed the Full-Stack Developer course)</em> </li>
@@ -80,13 +82,13 @@
           <em>(74 hrs Total) (38% Completed the Full-Stack Developer course)</em> </li>
 
         <li> <u>Week 6: Monday, July 12 - Sunday, July 18</u> <br> 
-          I started the week off working with APIs in vanilla JavaScript and then moved on to React. I learned about React states, components, props and the lifecycle. I learned about 
-          manipulating the DOM and how to create a React app locally. This week was all about working with classes, but towards the end  of the week I started to learn about hooks. <br> 
+          I started the week off working with APIs in vanilla JavaScript and then moved on to React. I learned about React states, components, props, and the lifecycle. I learned about 
+          manipulating the DOM and how to create a React app locally. This week was all about working with classes, but towards the end of the week, I started to learn about hooks. <br> 
           <em>(85 hrs Total) (45% Completed the Full-Stack Developer course)</em> </li>
 
         <li> <u>Week 7: Monday, July 19 - Sunday, July 25</u> <br> 
           This week covered useState, useEffect, useRef, and embedding CSS in JSX. I then learned about properly separating components and importing and exporting them accordingly. The second 
-          half of the week briefly covered Redux. I learned about states, actions, reducers, pure functions and storing data in Redux. <br> 
+          half of the week briefly covered Redux. I learned about states, actions, reducers, pure functions, and storing data in Redux. <br> 
           <em>(94 hrs Total) (51% Completed the Full-Stack Developer course)</em> </li>
 
         <li> <u>Week 8: Monday, July 26 - Sunday, August 1</u> <br> 
@@ -141,9 +143,11 @@
           but this time with React exclusively. I’m almost certain this is what “tutorial hell” is, but I planned on moving on to guided projects via YouTube and I wasn’t feeling quite ready 
           until now.  </li>
                 
-        <!-- <li> <u>DATE</u> <br> 
-          ENTRY <br> 
-          <em>PROGRESS</em> </li> -->
+        <li> <u>Week 17: Monday, September 27- Sunday, October 3</u> <br> 
+          I changed my mind! I revisited the Fullstack Academy boot camp curriculum and information. I applied for a loan, added it to my budget, and planned out what my weekly schedule might 
+          look like. I really liked what I saw and I felt like I was properly prepared for it. So I signed up and created a new game plan. The boot camp starts November 16th so I have over a 
+          month to make sure I’m as prepared as I possibly can be. My new plan is to complete the Back End portion, and therefore the rest of, the Full-stack Developer program on Codecademy 
+          ahead of the boot camp start. I spent this week considering the boot camp, going back and forth with UTD on my enrollment, and planning out my next steps. </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
