--- a/index.html
+++ b/index.html
@@ -47,56 +47,56 @@
     <h2>Coding Journal</h2>
 
         <li> <u>Week 0: Saturday, June 5 - Sunday, June 6</u> <br> 
-          I started by first resetting all my previous progress on Codecademy, then subscribing to the Full-Stack Engineer Pro course. The first two days, and my first “week”, I was excited 
+          I started by first resetting all my previous progress on Codecademy, then subscribing to the Fullstack Engineer Pro course. The first two days, and my first “week”, I was excited 
           and probably overdid it a bit. I spent 3 hours both days, I learned the basics of JavaScript and I spent time reading the first chapters in the two Jon Duckett books my curriculum 
           recommended. (HTML & CSS Design and Build Websites - JavaScript and JQuery) <br> 
-          <em>(6 hrs Total) (4% Completed the Full-Stack Developer course)</em> </li>
+          <em>(6 hrs Total) (4% Completed the Fullstack Developer course)</em> </li>
 
         <li> <u>Week 1: Monday, June 7 - Sunday, June 13</u> <br> 
           My first full week. I spent over 3 hours per day between Codecademy, reading the textbooks, and watching youtube. I struggled with higher-order functions, so I slowed down a bit to 
           research them more. I turned to YouTube and a friend in the industry for help. I was also introduced to the art of understanding error messages and started doing daily knowledge 
           checks with the CodecademyGo mobile app. <br> 
-          <em>(29.5 hrs Total) (11% Completed the Full-Stack Developer course)</em> </li>
+          <em>(29.5 hrs Total) (11% Completed the Fullstack Developer course)</em> </li>
 
         <li> <u>Week 2: Monday, June 14 - Sunday, June 2</u> <br> 
           The first thing I learned about this week was git, what it is and how to use GitHub. After git the course returned to JavaScript. All in all, I had a rough week, I was unproductive 
           and unfocused. I had a stressful life event that made the week challenging, but I powered through as best as I could. I found myself making more progress in the textbooks than the 
           actual Codecademy course. <br> 
-          <em>(42.5 hrs Total) (15% Completed the Full-Stack Developer course)</em> </li>
+          <em>(42.5 hrs Total) (15% Completed the Fullstack Developer course)</em> </li>
 
         <li> <u>Week 3: Monday, June 21 - Sunday, June 27</u> <br> 
           This week saw me return to the office. I was previously working from home but my office decided to reopen. I was determined to slow down as little as possible though. While at the 
           office I was able to read a few chapters of my textbook and watch the CS50 Lecture Series on YouTube. By Sunday I had learned enough HTML and CSS to get a basic portfolio page up, 
           and hosted it on GitHub Pages. I was very happy with the progress I had made in the course and with already having something to show for my efforts. <br> 
-          <em>(53.5 hrs Total) (22% Completed the Full-Stack Developer course)</em> </li>
+          <em>(53.5 hrs Total) (22% Completed the Fullstack Developer course)</em> </li>
 
         <li> <u>Week 4: Monday, June 28 - Sunday, July 4</u> <br> 
           This week was largely uneventful, just more HTML and CSS courses. I’m done with JavaScript for a bit, having completed the fundamentals. By the end of the week I had reached the 
           Create A Portfolio Page section of the curriculum, which I was already ahead of. I set myself up to be able to take full advantage of the long weekend, and read chapters in the 
           textbooks to round out the week. <br> 
-          <em>(63.5 hrs Total) (30% Completed the Full-Stack Developer course)</em> </li>
+          <em>(63.5 hrs Total) (30% Completed the Fullstack Developer course)</em> </li>
                 
         <li> <u>Week 5: Monday, July 5 - Sunday, July 11</u> <br> 
           I took advantage of the long weekend to finish setting up my basic portfolio website. I even figured out how to add a contact me page without any JavaScript. This week was largely 
           about keeping the momentum going. Work was definitely taking my energy out of me but I wasn’t about to let anything stop me! <br> 
-          <em>(74 hrs Total) (38% Completed the Full-Stack Developer course)</em> </li>
+          <em>(74 hrs Total) (38% Completed the Fullstack Developer course)</em> </li>
 
         <li> <u>Week 6: Monday, July 12 - Sunday, July 18</u> <br> 
           I started the week off working with APIs in vanilla JavaScript and then moved on to React. I learned about React states, components, props, and the lifecycle. I learned about 
           manipulating the DOM and how to create a React app locally. This week was all about working with classes, but towards the end of the week, I started to learn about hooks. <br> 
-          <em>(85 hrs Total) (45% Completed the Full-Stack Developer course)</em> </li>
+          <em>(85 hrs Total) (45% Completed the Fullstack Developer course)</em> </li>
 
         <li> <u>Week 7: Monday, July 19 - Sunday, July 25</u> <br> 
           This week covered useState, useEffect, useRef, and embedding CSS in JSX. I then learned about properly separating components and importing and exporting them accordingly. The second 
           half of the week briefly covered Redux. I learned about states, actions, reducers, pure functions, and storing data in Redux. <br> 
-          <em>(94 hrs Total) (51% Completed the Full-Stack Developer course)</em> </li>
+          <em>(94 hrs Total) (51% Completed the Fullstack Developer course)</em> </li>
 
         <li> <u>Week 8: Monday, July 26 - Sunday, August 1</u> <br> 
           The week started off with finishing up the Redux lessons. I learned about testing in Redux then moved back to using git. This time I learned about creating and deleting branches in 
           git and how to handle merge conflicts. At this point I was through the Front-End section of the curriculum so I took this time to finish up every other Front-End related course I 
           could on Codecademy. I covered the Sass, intermediate CSS, Responsive Design, Bootstrap, and Navigation Design courses. At this point in my journey I felt it would be a good idea to 
           create a couple web apps in React for my projects page in my portfolio. <br> 
-          <em>(104 hrs Total) (56% Completed the Full-Stack Developer course)</em> </li>
+          <em>(104 hrs Total) (56% Completed the Fullstack Developer course)</em> </li>
 
         <li> <u>Week 9: Monday, August 2 - Sunday, August 8</u> <br> 
           I started the week by taking a couple days to myself. I didn’t make any progress, I just relaxed. The first thing I did was make a list of the React projects I wanted to attempt. I 
