--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           I changed my mind! I revisited the Fullstack Academy boot camp curriculum and information. I applied for a loan, added it to my budget, and planned out what my weekly schedule might 
           look like. I really liked what I saw and I felt like I was properly prepared for it. So I signed up and created a new game plan. The boot camp starts November 16th so I have over a 
           month to make sure I’m as prepared as I possibly can be. My new plan is to complete the Back End portion, and therefore the rest of, the Full-stack Developer program on Codecademy 
-          ahead of the boot camp start. I spent this week considering the boot camp, going back and forth with UTD on my enrollment, and planning out my next steps. </li>
+          ahead of the boot camp start. </li>
 
         <!-- <li> <u>DATE</u> <br> 
           ENTRY <br> 
