--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Coding Journal Preface -->
   <div class="AboutSetup">
-    <hr style="width:100%;text-align:left;margin-left:0">
+    <hr style="width:100%; text-align:left; margin-left:0; color:white;">
     <h2>My Coding Journey</h2>
       <p>I officially started my coding journey on <strong>June 5th, 2021.</strong> I had started, and stopped, twice before but this time I was committed! I was ready to change my career and 
         learn a new skill. I started out using Codecademy and YouTube, about 16 weeks in I decided to sign up for a coding boot camp, Fullstack Academy, hosted through the University of Texas 
