strong tag to b tag for start date

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="AboutSetup">
     <hr style="width:100%; text-align:left; margin-left:0; color:white;">
     <h2>My Coding Journey</h2>
-      <p>I officially started my coding journey on <strong>June 5th, 2021.</strong> I had started, and stopped, twice before but this time I was committed! I was ready to change my career and 
+      <p>I officially started my coding journey on <b>June 5th, 2021.</b> I had started, and stopped, twice before but this time I was committed! I was ready to change my career and 
         learn a new skill. I started out using Codecademy and YouTube, about 16 weeks in I decided to sign up for a coding boot camp, Fullstack Academy, hosted through the University of Texas 
         at Dallas.</p>
 
