updated week 17 entry following bootcamp start date push

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                 
         <li> <u>Week 17: Monday, September 27- Sunday, October 3</u> <br> 
           I changed my mind! I revisited the Fullstack Academy boot camp curriculum and information. I applied for a loan, added it to my budget, and planned out what my weekly schedule might 
-          look like. I really liked what I saw and I felt like I was properly prepared for it. So I signed up and created a new game plan. The boot camp starts November 16th so I have over a 
-          month to make sure I’m as prepared as I possibly can be. My new plan is to complete the Back End portion, and therefore the rest of, the Full-stack Developer program on Codecademy 
+          look like. I really liked what I saw and I felt like I was properly prepared for it. So I signed up and created a new game plan. The boot camp starts December 6th so I have a couple 
+          of months to make sure I’m as prepared as I possibly can be. My new plan is to complete the Back End portion, and therefore the rest of, the Fullstack Developer program on Codecademy 
           ahead of the boot camp start. </li>
 
         <!-- <li> <u>DATE</u> <br> 
